trunk/Archive2/50/e04e3641a5e85d/output
main.cpp: In function 'int main()':
main.cpp:14:3: error: expected ';' before 'printf'
   printf("ingresar x");
   ^
main.cpp:16:9: error: redeclaration of 'float y'
   float y=b*x/a;
         ^
main.cpp:9:9: note: 'float y' previously declared here
   float y =0;
         ^
main.cpp:17:23: error: 'y_resultado_de_regla' was not declared in this scope
   printf ("y es: %f" ,y_resultado_de_regla de tres);
                       ^
main.cpp:9:9: warning: unused variable 'y' [-Wunused-variable]
   float y =0;
         ^
main.cpp: In function 'int main()':
main.cpp:22:5: error: redefinition of 'int main()'
 int main (void)
     ^
main.cpp:3:5: note: 'int main()' previously defined here
 int main (void)
     ^
main.cpp:24:9: warning: unused variable 'perimetro' [-Wunused-variable]
   float perimetro=0;
         ^
